--- a/gui/s3_config_advanced.ui
+++ b/gui/s3_config_advanced.ui
@@ -127,10 +127,10 @@
         <item>
          <widget class="QCheckBox" name="checkBox_fileCache_allowNonEmptyTmp">
           <property name="toolTip">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Allow a non-empty temp directory at startup&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Keep local file cache on unmount and remount (allow-non-empty-temp)&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="text">
-           <string>Allow Non-empty Tmp</string>
+           <string>Persist File Cache</string>
           </property>
          </widget>
         </item>
