Make GUI compatible with block_cache

--- a/gui/azure_config_common.ui
+++ b/gui/azure_config_common.ui
@@ -191,6 +191,11 @@
            <string>Streaming</string>
           </property>
          </item>
+         <item>
+          <property name="text">
+           <string>Block Cache</string>
+          </property>
+         </item>
         </widget>
        </item>
       </layout>
