--- a/gui/s3_config_common.ui
+++ b/gui/s3_config_common.ui
@@ -226,6 +226,11 @@
            <string>Streaming</string>
           </property>
          </item>
+         <item>
+          <property name="text">
+           <string>Block Cache</string>
+          </property>
+         </item>
         </widget>
        </item>
       </layout>
