Use Qt Creator UI for button to select mount or drive letter

--- a/gui/mountPrimaryWindow.ui
+++ b/gui/mountPrimaryWindow.ui
@@ -56,6 +56,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="button_browse">
+        <property name="text">
+         <string>Browse</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
     <item row="1" column="0" colspan="2">
