--- a/gui/s3_config_common.ui
+++ b/gui/s3_config_common.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>540</width>
-    <height>543</height>
+    <height>558</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -481,6 +481,13 @@
      </property>
      <property name="text">
       <string>Save</string>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="1" alignment="Qt::AlignRight">
+    <widget class="QCheckBox" name="checkBox_encryptConfig">
+     <property name="text">
+      <string>Encrypt config file</string>
      </property>
     </widget>
    </item>
